--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,8 @@
 <!-- META -->
 <meta charset="utf-8">
 <title>Watermelon - Contact</title>
-<meta name="robots" content="index,follow">
-<meta name="description" id="description" property="description" content="Création de sites web et boutiques en ligne à prix abordables">
+<meta name="robots" content="noindex,nofollow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-<!-- OPEN GRAPH -->
-<meta property="og:image" content="/img/automation.png" />
-<meta property="og:title" content="Watermelon - Sites web" />
-<meta property="og:description" content="Création de sites web et boutiques en ligne à prix abordables" />
 
 <!-- AUTRES -->
 <link rel="stylesheet" href="/code/style.css">
