--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 
 <!-- META -->
 <meta charset="utf-8">
-<title>Watermelon - Mentions légales</title>
+<title>Watermelon - Confidentialité</title>
 <meta name="robots" content="noindex,nofollow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
@@ -46,80 +46,110 @@
   <!--  page --------------------------------------------------------------------------- -->
 <div id="texte">
 
-<div class="grandtitre">Mentions légales</div>
+<div class="grandtitre">Confidentialité</div>
 
-<div class="titre">
-  Éditeur du site
+<div class="titre">1. Introduction
 </div>
 
 <div class="texte">
-  Watermelon Sàrl, société à responsabilité limitée, dont le siège social est situé à Coutzet 8, 1264 St-Cergue, Suisse. Numéro d'identification du registre du commerce : CHE-135.208.748.
+  Watermelon Sàrl, située à Coutzet 8, 1264 St-Cergue, Suisse, est engagée dans la protection de la vie privée de ses clients. Cette politique de confidentialité décrit comment nous collectons, utilisons, et partageons les données personnelles que vous nous fournissez en utilisant notre site web et nos services.
 </div>
 
 <div class="titre">
-  Responsable de la publication
-  </div>
-  
-  <div class="texte">
-    Klim Povaliaev, joignable au +41 79 291 87 21 ou par email à l'adresse klim@watermelon.cool.
-</div>
-
-<div class="titre">
-  Hébergement
+  2. Responsable du Traitement des Données
 </div>
 
 <div class="texte">
-  Le site est hébergé par Github Pages.
+  Le responsable du traitement des données est Klim Povaliaev, joignable au +41 79 291 87 21 ou par e-mail à klim@watermelon.cool.
 </div>
 
 <div class="titre">
-  Contact
+  3. Données Collectées
 </div>
 
 <div class="texte">
-  Pour toute question relative à notre service, vous pouvez nous contacter par téléphone au +41 79 291 87 21 ou par email à klim@watermelon.cool.
+  Nous collectons les données nécessaires à la création de votre site web, telles que votre nom, adresse e-mail, adresse postale, et numéro de téléphone.
 </div>
 
 <div class="titre">
-  Conditions Générales de Vente (CGV)
+  4. Finalités du Traitement
 </div>
 
 <div class="texte">
-  Nos conditions générales de vente sont disponibles <a href="/cgv.html">ici</a>. Nous vous invitons à les lire attentivement.
+  Ces données sont collectées exclusivement pour la création de votre site web, incluant la gestion de votre compte, le support client, et la communication nécessaire à la prestation de nos services.
 </div>
 
 <div class="titre">
-  Politique de confidentialité et de protection des données personnelles
+  5. Base Légale du Traitement
 </div>
 
 <div class="texte">
-  La protection de vos données personnelles est au cœur de nos préoccupations. Nous nous engageons à respecter la confidentialité de l'information personnelle que nous collectons. Notre politique de confidentialité, conçue pour être conforme au Règlement Général sur la Protection des Données (RGPD) pour les utilisateurs au sein de l'Union européenne ainsi qu'à la loi fédérale sur la protection des données (LPD) pour les utilisateurs en Suisse, s'applique à tous nos clients, sans distinction de leur pays de résidence. Pour en savoir plus sur la manière dont nous collectons, utilisons et protégeons vos données personnelles, veuillez consulter notre politique de confidentialité disponible <a href="/privacy.html">ici</a>.
+  Le traitement de vos données est basé sur l'exécution d'un contrat (la création de votre site web personnalisé) pour lequel vous nous fournissez ces données.
 </div>
 
 <div class="titre">
-  Propriété intellectuelle
+  6. Destinataires des Données
 </div>
 
 <div class="texte">
-  Le contenu de ce site, incluant, de façon non limitative, les graphiques, images, textes, vidéos, animations, sons, logos, gifs et icônes ainsi que leur mise en forme sont la propriété exclusive de la société Watermelon Sàrl à l'exception des marques, logos ou contenus appartenant à d'autres sociétés partenaires ou auteurs.
+  Vos données personnelles sont principalement traitées en interne chez Watermelon Sàrl. Les données nécessaires au traitement des paiements peuvent être partagées avec notre prestataire de services de paiement.
 </div>
 
 <div class="titre">
-  Utilisation du site
+  7. Transfert de Données hors de l'EEE
 </div>
 
 <div class="texte">
-  L'utilisateur reconnaît avoir pris connaissance de ces conditions d'utilisation et s'engage à les respecter. Watermelon Sàrl se réserve le droit de modifier la présente notice à tout moment. L'utilisateur s'engage donc à la consulter régulièrement.
+  Les données envoyées via le formulaire de contact peuvent être traitées par Gmail (Google), et nous nous assurons de la protection de ces données conformément aux standards de protection de la vie privée applicables.
 </div>
 
 <div class="titre">
-  Limitation de responsabilité
+  8. Durée de Conservation des Données
 </div>
 
 <div class="texte">
-  Watermelon Sàrl s'efforce d'assurer au mieux de ses possibilités, l'exactitude et la mise à jour des informations diffusées sur ce site, dont elle se réserve le droit de corriger, à tout moment et sans préavis, le contenu. Toutefois, Watermelon Sàrl ne peut garantir l'exactitude, la précision ou l'exhaustivité des informations mises à la disposition sur ce site.
+  Nous conservons vos données personnelles pour la durée nécessaire à la prestation de nos services, plus un délai conforme aux exigences légales de conservation.
 </div>
 
+<div class="titre">
+  9. Droits des Personnes Concernées
+</div>
+
+<div class="texte">
+  Vous avez le droit d'accéder, de rectifier, de supprimer vos données personnelles, de limiter leur traitement, de vous opposer au traitement, et de la portabilité des données.
+</div>
+
+<div class="titre">
+  10. Exercice de vos Droits
+</div>
+
+<div class="texte">
+  Pour exercer ces droits, veuillez nous contacter à l'adresse e-mail ou au numéro de téléphone fournis.
+</div>
+
+<div class="titre">
+  11. Sécurité des Données
+</div>
+
+<div class="texte">
+  Nous mettons en œuvre des mesures de sécurité techniques et organisationnelles pour protéger vos données personnelles contre l'accès non autorisé, la modification, la divulgation, ou la destruction.
+</div>
+
+<div class="titre">
+  12. Cookies et Technologies de Suivi
+</div>
+
+<div class="texte">
+  Nous n'utilisons pas de cookies ni de technologies de suivi sur notre site web.
+</div>
+
+<div class="titre">
+  13. Modifications de la Politique de Confidentialité
+</div>
+
+<div class="texte">
+  Nous nous réservons le droit de modifier cette politique de confidentialité. Les modifications seront communiquées sur notre site web ou par e-mail.
+</div>
 
 
 
