--- a/dev.html
+++ b/dev.html
@@ -108,7 +108,7 @@
         <div class="reponse" data-prix="10000">Express (moins de 3 mois)</div>
       </div>
 
-      <div class="total">Votre estimation est de <span class="prix chf">0</span> CHF</div>
+      <div class="total">Votre estimation est de <span id="prix" class="eur">0</span> €</div>
 
     </div>
 
