--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <div class="bloc deux">
   <div class="soustitre">Création site e-commerce</div>
-  <div class="prix">1'490 €</div>
+  <div class="prix">1 490 €</div>
   <ul>
     <li>Choix du nom de domaine et e-mail</li>
     <li>Création du visuel de la boutique</li>
@@ -117,7 +117,7 @@
 
 <div class="bloc trois"> 
 <div class="soustitre">Création site internet <span>Premium</span></div>
-<div class="prix">1'490 €</div>
+<div class="prix">1 490 €</div>
 
 <ul>
   <li>Choix du nom de domaine et e-mail <span>(jusqu'à 2 noms de domaine et 5 adresses e-mail)</span></li>
@@ -145,7 +145,7 @@
 
 <div class="bloc quatre"> 
   <div class="soustitre">Création site e-commerce <span>Premium</span></div>
-  <div class="prix">1'990 €</div>
+  <div class="prix">1 990 €</div>
   
   <ul>
     <li>Choix du nom de domaine et e-mail <span>(jusqu'à 2 noms de domaine et 5 adresses e-mail)</span></li>
