--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <li>Nom de domaine, e-mail, hébergement et maintenance inclus pour la 1ère année</li>
 </ul>
 
-<a href="https://buy.stripe.com/00g7uM00I3xr8bCcMM" target="_blank"><div class="btn">Payer</div></a>
+<a href="https://buy.stripe.com/6oEbL228Qfg99fG8wC" target="_blank"><div class="btn">Payer</div></a>
 
 <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
 
@@ -104,7 +104,7 @@
     <li>Nom de domaine, e-mail, hébergement et maintenance inclus pour la 1ère année</li>
   </ul>
 
-  <a href="https://buy.stripe.com/5kA3ewdRyd818bC001" target="_blank"><div class="btn">Payer</div></a>
+  <a href="https://buy.stripe.com/14k4iA6p68RLgI800a" target="_blank"><div class="btn">Payer</div></a>
 
   <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
 
@@ -134,7 +134,7 @@
   <li>Noms de domaine, e-mails, hébergements et maintenance inclus pour la 1ère année</li>
 </ul>
 
-<a href="https://buy.stripe.com/8wM7uMaFmec577y3cg" target="_blank"><div class="btn">Payer</div></a>
+<a href="https://buy.stripe.com/6oE2ascNuaZT2Ri9AJ" target="_blank"><div class="btn">Payer</div></a>
 
 <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
 
@@ -164,7 +164,7 @@
       <li>Noms de domaine, e-mails, hébergements et maintenance inclus pour la 1ère année</li>
   </ul>
   
-  <a href="https://buy.stripe.com/eVaeXedRy0lf1NecMR" target="_blank"><div class="btn">Payer</div></a>
+  <a href="https://buy.stripe.com/bIYdTaaFmec5crS4go" target="_blank"><div class="btn">Payer</div></a>
   
   <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
   
@@ -186,7 +186,7 @@
     <li>Maintenance et évolution de l'outil de gestion</li>
     <li>Outil newsletter (5 000 envois / mois inclus)</li>
   </ul>
-  <a href="https://buy.stripe.com/8wM3ew3cUaZT77y28b" target="_blank"><div class="btn">Payer et s'abonner</div></a>
+  <a href="https://buy.stripe.com/8wM5mE14M3xr2Ri6ov" target="_blank"><div class="btn">Payer et s'abonner</div></a>
   <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
   </div>
   
