--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <a href="https://buy.stripe.com/6oEbL228Qfg99fG8wC" target="_blank"><div class="btn">Payer</div></a>
 
-<div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
+<div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="cgv.html">CGV</a>.</div>
 
 </div>
 
@@ -106,7 +106,7 @@
 
   <a href="https://buy.stripe.com/14k4iA6p68RLgI800a" target="_blank"><div class="btn">Payer</div></a>
 
-  <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
+  <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="cgv.html">CGV</a>.</div>
 
 </div>
 
@@ -136,7 +136,7 @@
 
 <a href="https://buy.stripe.com/6oE2ascNuaZT2Ri9AJ" target="_blank"><div class="btn">Payer</div></a>
 
-<div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
+<div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="cgv.html">CGV</a>.</div>
 
 </div>
 
@@ -166,7 +166,7 @@
   
   <a href="https://buy.stripe.com/bIYdTaaFmec5crS4go" target="_blank"><div class="btn">Payer</div></a>
   
-  <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
+  <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="cgv.html">CGV</a>.</div>
   
   </div>
 
@@ -187,7 +187,7 @@
     <li>Outil newsletter (5 000 envois / mois inclus)</li>
   </ul>
   <a href="https://buy.stripe.com/8wM5mE14M3xr2Ri6ov" target="_blank"><div class="btn">Payer et s'abonner</div></a>
-  <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="/cgv.html">CGV</a>.</div>
+  <div class="cgv">En cliquant sur "Payer" vous acceptez nos <a href="cgv.html">CGV</a>.</div>
   </div>
   
   
