--- a/lang.html
+++ b/lang.html
@@ -32,12 +32,12 @@ a:hover {cursor:pointer !important;}
   <!--  page --------------------------------------------------------------------------- -->
 <div id="lang">
 
+<a href="https://watermelon.cool">Global</a>
 <a href="https://watermelon.fr">France</a>
 <a href="https://watermelon.cool/ru">Россия</a>
 <a href="https://watermelon.ch/de">Schweiz</a>
 <a href="https://watermelon.ch">Suisse</a>
-<a href="https://watermelon.ch/it">Svizzera</a>
-<a class="noborder" href="https://watermelon.ch/en">Switzerland</a>
+<a class="noborder" href="https://watermelon.ch/it">Svizzera</a>
 
 </div>
 
