--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- OPEN GRAPH -->
 <meta property="og:image" content="/img/automation.png" />
-<meta property="og:title" content="Watermelon - Sites web" />
+<meta property="og:title" content="Watermelon - Création de site web" />
 <meta property="og:description" content="Création de sites web et boutiques en ligne à prix abordables" />
 
 <!-- AUTRES -->
