--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <li>Choix du nom de domaine et e-mail</li>
     <li>Création du visuel de la boutique</li>
     <li>Configuration du catalogue d'articles de base (vous pouvez ensuite ajouter autant d'articles que vous le désirez)</li>
-    <li>Intégration des modes de paiements (Twint, Mastercard, Visa, Apple Pay...) <a href="https://www.mollie.com/pricing" target="_blank">Plus d'infos</a></li>
+    <li>Intégration des modes de paiements (Visa, Mastercard, PayPal, Apple Pay...) <a href="https://stripe.com/fr/pricing" target="_blank">Plus d'infos</a></li>
     <li>Intégration des modes de livraisons</li>
     <li>Mise à disposition d'une banque d'images (photos et icônes au choix) </li>
     <li>Outil de gestion de la boutique</li>
@@ -151,7 +151,7 @@
     <li>Choix du nom de domaine et e-mail <span>(jusqu'à 2 noms de domaine et 5 adresses e-mail)</span></li>
       <li>Création du visuel de la boutique</li>
       <li>Configuration du catalogue d'articles de base (vous pouvez ensuite ajouter autant d'articles que vous le désirez)</li>
-      <li>Intégration des modes de paiements (Twint, Mastercard, Visa, Apple Pay...) <a href="https://www.mollie.com/pricing" target="_blank">Plus d'infos</a></li>
+      <li>Intégration des modes de paiements (Visa, Mastercard, PayPal, Apple Pay...) <a href="https://stripe.com/fr/pricing" target="_blank">Plus d'infos</a></li>
       <li>Intégration des modes de livraisons</li>
       <li><span>Sélection pour vous de photos et icônes</span></li>
       <li><span>Site multilingue et multi-devises</span></li>
