--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <li>Outil de gestion de contenu du site</li>
   <li>Site mobile / responsive</li>
   <li>Site en HTTPS</li>
-  <li>Conforme au LPD et RGPD</li>
+  <li>Conforme au RGPD</li>
   <li>Statistiques Google Analytics</li>
   <li>Nom de domaine, e-mail, hébergement et maintenance inclus pour la 1ère année</li>
 </ul>
@@ -99,7 +99,7 @@
     <li>Outil de gestion de la boutique</li>
     <li>Site mobile / responsive</li>
     <li>Site en HTTPS</li>
-    <li>Conforme au LPD et RGPD</li>
+    <li>Conforme au RGPD</li>
     <li>Statistiques Google Analytics</li>
     <li>Nom de domaine, e-mail, hébergement et maintenance inclus pour la 1ère année</li>
   </ul>
@@ -129,7 +129,7 @@
   <li>Outil de gestion de contenu du site</li>
   <li>Site mobile / responsive</li>
   <li>Site en HTTPS</li>
-  <li>Conforme au LPD et RGPD</li>
+  <li>Conforme au RGPD</li>
   <li>Statistiques Google Analytics</li>
   <li>Noms de domaine, e-mails, hébergements et maintenance inclus pour la 1ère année</li>
 </ul>
@@ -159,7 +159,7 @@
       <li>Outil de gestion de la boutique</li>
       <li>Site mobile / responsive</li>
       <li>Site en HTTPS</li>
-      <li>Conforme au LPD et RGPD</li>
+      <li>Conforme au RGPD</li>
       <li>Statistiques Google Analytics</li>
       <li>Noms de domaine, e-mails, hébergements et maintenance inclus pour la 1ère année</li>
   </ul>
