--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,8 @@
   <div class="feedback">Votre message est bien arrivé, vous recevrez une réponse prochainement.</div>
 
   
+  <img src="/img/office.jpg">
+
 
 </div>
 
