--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
   
     <div id="portofolio">
   
-      <img src="/img/image1.jpg">
-      <img src="/img/image2.jpg">
-      <img src="/img/image3.jpg">
-      <img src="/img/image4.jpg">
-       <img src="/img/image5.jpg">
+      <img src="/img/image1.svg">
+      <img src="/img/image2.svg">
+      <img src="/img/image3.svg">
+      <img src="/img/image4.svg">
+       <img src="/img/image5.svg">
       <img src="/img/image6.jpg">
   
     </div>
