--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <img src="/img/image3.svg">
       <img src="/img/image4.svg">
        <img src="/img/image5.svg">
-      <img src="/img/image6.jpg">
+      <img src="/img/image6.svg">
   
     </div>
   
