--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ a {color:white;}
 #dev .btn {display:inline-block; border:solid 2px rgba(255,255,255,0.2); padding:15px 25px; border-radius:25px; }
 
 @media screen and (max-width: 800px) {
-  #dev .titre {width:90%; margin:0 5%; }
-  #dev .soustitre {width:90%; padding:30px 5%;  }
+  #dev .titre {width:90%; margin:0 5%; font-size:40px; }
+  #dev .soustitre {width:90%; padding:30px 5%; font-size:16px;  }
 }
 
 /* page contact ------------------------------------------------------------------- */
@@ -77,9 +77,11 @@ a {color:white;}
 #contact .table {position:absolute; text-align:left; left: 50%; transform: translateX(-50%) ; }
 #contact .material-symbols-outlined {background:black; color:white; margin-right:20px; border-radius:30px; padding:10px; font-size:25px; font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 24; vertical-align:middle; }
 #contact .text {font-size:25px; font-weight:700; vertical-align:middle; }
+#contact a {color:black;}
 
 @media screen and (max-width: 800px) {
-  #contact .titre {width:90%; margin:0 5%; }
+  #contact .titre {width:90%; margin:0 5%; font-size:40px; }
+  #contact .texte {font-size:16px; }
 }
 
 
