--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@ a {color:white;}
 #contact .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:50px; }
 #contact .table {position:absolute; text-align:left; left: 50%; transform: translateX(-50%) ; }
 #contact .material-symbols-outlined {background:black; color:white; margin-right:20px; border-radius:30px; padding:10px; font-size:25px; font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 24; vertical-align:middle; }
-#contact .text {font-size:25px; font-weight:700; vertical-align:middle; }
+#contact .texte {font-size:25px; font-weight:700; vertical-align:middle; }
 #contact a {color:black;}
 
 @media screen and (max-width: 800px) {
   #contact .titre {width:90%; margin:0 5%; font-size:40px; }
-  #contact .texte {font-size:16px; }
+  #contact .texte {font-size:16px !important; }
 }
 
 
@@ -113,9 +113,9 @@ a {color:white;}
       <div class="titre">Discutons de votre projet</div>
 
       <div class="table">
-      <span class="material-symbols-outlined">mail</span><span class="text">klim@watermelon.cool</span>
+      <span class="material-symbols-outlined">mail</span><span class="texte">klim@watermelon.cool</span>
       <br> <br>
-      <span class="material-symbols-outlined">call</span><span class="text">+41 79 291 87 21</span>
+      <span class="material-symbols-outlined">call</span><span class="texte">+41 79 291 87 21</span>
     </div>
 
       </div>
