--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ a {color:white;}
 
 @media screen and (max-width: 800px) {
   #contact .titre {width:90%; margin:0 5%; font-size:40px; }
-  #contact .texte {font-size:16px !important; }
+  #contact .material-symbols-outlined { font-size:20px; }
+  #contact .texte {font-size:16px; }
 }
 
 
