--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ a {color:white;}
 #dev .btn {display:inline-block; border:solid 2px rgba(255,255,255,0.2); padding:15px 25px; border-radius:25px; }
 
 @media screen and (max-width: 800px) {
+  #dev .contenu {top: 55%; transform: translateY(-55%) ;  }
   #dev .titre {width:90%; margin:0 5%; font-size:40px; }
   #dev .soustitre {width:90%; padding:30px 5%; font-size:16px;  }
 }
