--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ a {color:white;}
 /* page contact ------------------------------------------------------------------- */
 #contact {position:relative; width:100%; background:white; color:black; text-align:center; padding:100px 0 230px 0; }
 #contact .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:50px; }
-#contact .table {position:absolute; text-align:left; left: 50%; transform: translateX(-50%) ; }
-#contact .material-symbols-outlined {background:black; color:white; margin-right:20px; border-radius:30px; padding:10px; font-size:25px; font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 24; vertical-align:middle; }
-#contact .texte {font-size:25px; font-weight:700; vertical-align:middle; }
+#contact table {position:absolute; text-align:left; left: 50%; transform: translateX(-50%) ; font-size:25px; font-weight:700; }
+#contact table td {padding:10px;}
+#contact .material-symbols-outlined {background:black; color:white; border-radius:30px; padding:10px; font-size:25px; font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 24;  }
 #contact a {color:black;}
 
 @media screen and (max-width: 800px) {
@@ -114,11 +114,16 @@ a {color:white;}
       
       <div class="titre">Discutons de votre projet</div>
 
-      <div class="table">
-      <span class="material-symbols-outlined">mail</span><span class="texte">klim@watermelon.cool</span>
-      <br> <br>
-      <span class="material-symbols-outlined">call</span><span class="texte">+41 79 291 87 21</span>
-    </div>
+      <table>
+        <tr>
+          <td><span class="material-symbols-outlined">mail</span></td>
+          <td>klim@watermelon.cool</td>
+        </tr>
+        <tr>
+          <td><span class="material-symbols-outlined">call</span></td>
+          <td>+41 79 291 87 21</td>
+        </tr>
+      </table>
 
       </div>
 
