--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ a {color:white;}
 #contact table {position:absolute; text-align:left; left: 50%; transform: translateX(-50%) ; font-size:25px; font-weight:700; }
 #contact table td {padding:10px;}
 #contact .material-symbols-outlined {background:black; color:white; border-radius:30px; padding:10px; font-size:25px; font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 24;  }
-#contact a {color:black;}
+#contact a {color:black; text-decoration:none;}
 
 @media screen and (max-width: 800px) {
   #contact .titre {width:90%; margin:0 5%; font-size:40px; padding-bottom:20px; }
