--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a {color:white;}
 .logo img {width:30px; vertical-align:middle; margin-right:10px; }
 
 /* page dev ------------------------------------------------------------------------ */
-#dev {width: 100%;height: 100vh;background-image: url("img/dev.jpg"); background-position: center; background-repeat: no-repeat; background-size: cover; text-align:center;  }
+#dev {width: 100%;height: 100vh;background-image: url("img/dev3.jpg"); background-position: center; background-repeat: no-repeat; background-size: cover; text-align:center;  }
 #dev .filtre {position:absolute; width:100%; height:100vh; background:rgba(0,0,0,0.5); }
 #dev .contenu {position:absolute; width:100%; top: 50%; transform: translateY(-50%) ;  }
 #dev .titre {width:700px; padding-left: calc(50% - 350px); font-size:60px; font-weight:700; line-height:115%; }
