--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@ a {color:white;}
 #dev .contenu {position:absolute; width:100%; top: 50%; transform: translateY(-50%) ;  }
 #dev .titre {width:700px; padding-left: calc(50% - 350px); font-size:60px; font-weight:700; line-height:115%; }
 #dev .soustitre {width:700px; font-size:20px; opacity:0.75; padding:30px calc(50% - 350px); line-height:150%; font-weight:400; }
-#dev .btn {display:inline-block; border:solid 2px rgba(255,255,255,0.2); padding:15px 25px; border-radius:25px; }
+#dev .btn {display:inline-block; border:solid 2px rgba(255,255,255,0.2); padding:15px 25px; border-radius:30px; }
 
 @media screen and (max-width: 800px) {
   #dev .contenu {top: 55%; transform: translateY(-55%) ;  }
   #dev .titre {width:90%; margin:0 5%; font-size:40px; }
   #dev .soustitre {width:90%; padding:30px 5%; font-size:16px;  }
+  #dev .btn {padding:10px 20px; }
 }
 
 /* page contact ------------------------------------------------------------------- */
