--- a/index.html
+++ b/index.html
@@ -14,44 +14,6 @@
 
 <style>
 
-/*
-.carousel {
-  position: relative;
-  overflow: hidden;
-  width: 100%; 
-  height: 100vh;
-}
-
-.carousel-item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  display: none;
-}
-
-.carousel-item.active {
-  display: block;
-}
-
-.carousel-prev, .carousel-next {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 1;
-  cursor: pointer;
-}
-
-.carousel-prev {
-  left: 10px;
-}
-
-.carousel-next {
-  right: 10px;
-}
-*/
-
 body,html{ background-color:black ; color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500;  }
 a {color:white;}
 
@@ -73,10 +35,12 @@ a {color:white;}
   #dev .btn {padding:10px 20px; }
 }
 
+/* page articles ------------------------------------------------------------------- */
+
 /* page contact ------------------------------------------------------------------- */
-#contact {position:relative; width:100%; background:white; color:black; text-align:center; padding:100px 0 230px 0; }
+#contact {width:100%; background:white; color:black; text-align:center; padding:100px 0 100px 0; }
 #contact .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:50px; }
-#contact table {position:absolute; text-align:left; left: 50%; transform: translateX(-50%) ; font-size:25px; font-weight:700; }
+#contact table {margin:0 auto; font-size:25px; text-align:left; font-weight:700; }
 #contact table td {padding:10px;}
 #contact .material-symbols-outlined {background:black; color:white; border-radius:30px; padding:10px; font-size:25px; font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 24;  }
 #contact a {color:black; text-decoration:none;}
@@ -86,7 +50,6 @@ a {color:white;}
   #contact table {font-size:20px; }
   #contact .material-symbols-outlined { font-size:20px; }
 }
-
 
 </style>
 
@@ -129,70 +92,10 @@ a {color:white;}
       </div>
 
 
-<!--div class="carousel">
-
-<div class="carousel-item dev">
-<div class="filtre"></div>
-<div class="contenu">
-
-<div class="titre">Bonjour ! Nous sommes une équipe de développeurs innovants</div>
-<div class="soustitre">Nous avons une solide expérience dans le développement d'apps, sites web, logiciels, solutions d'automatisations et intelligence artificielle.</div>
-<div class="btn">Contactez-vous</div>
-
-</div>
-</div>
-
-<div class="carousel-item contact" style="background:black;">
-  <div class="contenu">
-Slide 2
-</div>
-</div>
-
-
-
-<img class="logo" src="img/watermelon.svg">
-
-<button class="carousel-prev">Previous</button>
-<button class="carousel-next">Next</button>
-
-</div-->
-
-
-
 <script>
 
 
-/*
-const carousel = document.querySelector('.carousel');
-const items = document.querySelectorAll('.carousel-item');
-const prevButton = document.querySelector('.carousel-prev');
-const nextButton = document.querySelector('.carousel-next');
-
-let activeIndex = 0;
-
-items[activeIndex].classList.add('active');
-
-function next() {
-  items[activeIndex].classList.remove('active');
-  activeIndex = (activeIndex + 1) % items.length;
-  items[activeIndex].classList.add('active');
-}
-
-function prev() {
-  items[activeIndex].classList.remove('active');
-  activeIndex = (activeIndex - 1 + items.length) % items.length;
-  items[activeIndex].classList.add('active');
-}
-
-prevButton.addEventListener('click', prev);
-nextButton.addEventListener('click', next);
-*/
-
-
-
-
-
-/* titre -------------------------------------------------------------- */
+// titre -----------------------------------------------------------------------------------------------------------
 // Sélection de l'élément 'titre' qui est à l'intérieur des classes 'intro' et 'page'
 const titre = document.querySelector('#dev .titre');
 // Prendre le texte directement de l'élément HTML
@@ -216,6 +119,24 @@ function afficherLettreParLettre() {
 
 // Démarrer l'intervalle pour exécuter la fonction afficherLettreParLettre
 const interval = setInterval(afficherLettreParLettre, vitesse);
+
+// articles -------------------------------------------------------------------------------------------------------------
+fetch('articles/1.html')
+  .then(response => response.text())
+  .then(htmlContent => {
+    // Traitement du contenu HTML ici
+  });
+
+
+
+  fetch('/articles/1.html')
+  .then(response => response.text())
+  .then(htmlContent => {
+    // Traitement du contenu HTML ici
+  });
+
+
+
 
 
 </script>
