--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ const interval = setInterval(afficherLettreParLettre, vitesse);
 // articles -------------------------------------------------------------------------------------------------------------
 // Récupérez l'image à compresser
 const img = new Image();
-img.src = 'https://watermelon.cool/img/dev3.jpg';
+img.src = 'img/dev3.jpg';
 
 // Attendez que l'image soit chargée
 img.onload = () => {
