--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ a {color:white;}
   #contact .material-symbols-outlined { font-size:20px; }
 }
 
+#compression {position:fixed; bottom:0; right:0; z-index:100;}
+
 </style>
 
 </head>
