--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ a {color:white;}
 
 /* page dev ------------------------------------------------------------------------ */
 #dev {width: 100%;height: 100vh;background-image: url("img/dev3.jpg"); background-position: center; background-repeat: no-repeat; background-size: cover; text-align:center;  }
-#dev .filtre {position:absolute; width:100%; height:100vh; background:rgba(0,0,0,0.5); }
+#dev .filtre {position:absolute; width:100%; height:100vh; background:rgba(0,0,0,0.2); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); }
 #dev .contenu {position:absolute; width:100%; top: 50%; transform: translateY(-50%) ;  }
-#dev .titre {width:700px; padding-left: calc(50% - 350px); font-size:60px; font-weight:700; line-height:115%; }
+#dev .titre {width:700px; padding-left: calc(50% - 350px); font-size:60px; font-weight:700; line-height:115%; text-shadow: 0 0 5px rgba(0,0,0,0.5); }
 #dev .soustitre {width:700px; font-size:20px; opacity:0.75; padding:30px calc(50% - 350px); line-height:150%; font-weight:400; }
 #dev .btn {display:inline-block; border:solid 2px rgba(255,255,255,0.2); padding:15px 25px; border-radius:30px; }
 
@@ -36,13 +36,16 @@ a {color:white;}
 }
 
 /* page articles ------------------------------------------------------------------- */
-#articles {width:100%; background:rgb(30,30,30); color:white; text-align:center; padding:100px 0 100px 0; }
-#articles .box {width:1200px; margin:0 auto;}
+#articles {width:100%; background:black; color:white; text-align:center; padding:50px 0; }
+#articles .box {width:600px; margin:0 auto;}
 #articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
-#articles .article {display:inline-block; width:300px; height:250px; margin:10px 7px; padding:20px; text-align:left; /* border:solid 2px rgba(255,255,255,0.2);*/ background:rgba(255,255,255,0.1); border-radius:20px; font-size:16px; line-height:150%; }
-#articles .article .date {margin-bottom:10px; opacity:0.5; }
-#articles .article .titre {font-size:20px; padding:0; margin:0; margin-bottom:10px; }
-#articles .article .texte {opacity:0.8;}
+#articles .article {padding:40px 0; text-align:left; border-bottom:solid 1px rgba(255,255,255,0.1); cursor:pointer; }
+#articles .article .titre {font-size:22px; padding:0; margin:0; line-height:150%; }
+#articles .article .date {margin-bottom:10px; opacity:0.5; font-size:14px; font-weight:300; }
+#articles .article .texte {opacity:0.9; font-size:17px; font-weight:300; line-height:150%; }
+@media screen and (max-width: 650px) {
+  #articles .box {width:90%;}
+}
 
 /* page contact ------------------------------------------------------------------- */
 #contact {width:100%; background:white; color:black; text-align:center; padding:100px 0 100px 0; }
@@ -87,38 +90,20 @@ a {color:white;}
 <div class="box">
 
 <div class="article">
-<div class="date">15.06.24</div>
 <div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
+<div class="date">15.06.24</div>
 <div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
 </div>
 
 <div class="article">
-<div class="date">15.06.24</div>
 <div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
+<div class="date">15.06.24</div>
 <div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
 </div>
 
 <div class="article">
-<div class="date">15.06.24</div>
 <div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
-<div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
-</div>
-
-<div class="article">
 <div class="date">15.06.24</div>
-<div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
-<div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
-</div>
-
-<div class="article">
-<div class="date">15.06.24</div>
-<div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
-<div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
-</div>
-
-<div class="article">
-<div class="date">15.06.24</div>
-<div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
 <div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
 </div>
 
@@ -182,6 +167,21 @@ fetch('articles/1.html')
 .catch(error => console.error(`Erreur : ${error.message}`));
 */
 
+
+
+
+// Sélectionnez tous les éléments avec la classe "article"
+const articles = document.querySelectorAll('.article');
+
+// Vérifiez s'il y a au moins un élément avec la classe "article"
+if (articles.length > 0) {
+    // Sélectionnez le dernier élément avec la classe "article"
+    const dernierArticle = articles[articles.length - 1];
+
+    // Appliquez le style CSS désiré en modifiant directement les propriétés de style
+    dernierArticle.style.border = 'none';
+    // Ajoutez d'autres styles selon vos besoins
+}
 
 
 
