--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@ a {color:white;}
 
 /* page dev ------------------------------------------------------------------------ */
 #dev {width: 100%;height: 100vh;background-image: url("img/dev3.jpg"); background-position: center; background-repeat: no-repeat; background-size: cover; text-align:center;  }
-#dev .filtre {position:absolute; width:100%; height:100vh; background:rgba(0,0,0,0.2); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); }
+#dev .filtre {position:absolute; width:100%; height:100vh; background:rgba(0,0,0,0.3); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); }
 #dev .contenu {position:absolute; width:100%; top: 50%; transform: translateY(-50%) ;  }
-#dev .titre {width:700px; padding-left: calc(50% - 350px); font-size:60px; font-weight:700; line-height:115%; text-shadow: 0 0 5px rgba(0,0,0,0.5); }
+#dev .titre {width:700px; padding-left: calc(50% - 350px); font-size:60px; font-weight:700; line-height:115%; /* text-shadow: 0 0 5px rgba(0,0,0,0.5); */  }
 #dev .soustitre {width:700px; font-size:20px; opacity:0.75; padding:30px calc(50% - 350px); line-height:150%; font-weight:400; }
 #dev .btn {display:inline-block; border:solid 2px rgba(255,255,255,0.2); padding:15px 25px; border-radius:30px; }
 
 @media screen and (max-width: 800px) {
   #dev .contenu {top: 55%; transform: translateY(-55%) ;  }
-  #dev .titre {width:90%; margin:0 5%; font-size:40px; }
+  #dev .titre {width:90%; margin:0 5%; font-size:35px; }
   #dev .soustitre {width:90%; padding:30px 5%; font-size:16px;  }
   #dev .btn {padding:10px 20px; }
 }
