--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <style>
 
-body,html{ background-color:black ; color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500;  }
+body,html{ background:black; color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500;  }
 a {color:white;}
 
 .logo { position:absolute;  z-index:1 ; left: 50%; transform: translateX(-50%) ; top:20px; font-size:18px; font-weight:700; }
 .logo img {width:30px; vertical-align:middle; margin-right:7px; }
 
 /* page dev ------------------------------------------------------------------------ */
-#dev {width: 100%;height: 100vh; text-align:center;
+#dev {width: 100%;height: 100vh; text-align:center;  
  background:
 radial-gradient(ellipse at 25% 25%, rgba(11, 0, 159, 0.3) 0% , transparent 50%),
 radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
@@ -39,12 +39,12 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 }
 
 /* page articles ------------------------------------------------------------------- */
-#articles {width:100%; background:black; color:white; text-align:center; padding:50px 0; }
+#articles {width:100%; background:white; color:black; text-align:center; padding:50px 0; }
 #articles .box {width:600px; margin:0 auto;}
 #articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
-#articles .article {padding:40px 0; text-align:left; border-bottom:solid 1px rgba(255,255,255,0.1); cursor:pointer; }
-#articles .article .titre {font-size:22px; padding:0; margin:0; line-height:150%; }
-#articles .article .date {margin-bottom:10px; opacity:0.5; font-size:14px; font-weight:300; }
+#articles .article {padding:40px 0; text-align:left; border-bottom:solid 1px rgba(0,0,0,0.1); cursor:pointer; }
+#articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:150%; }
+#articles .article .date {margin-bottom:10px; opacity:0.5; font-size:15px; font-weight:400; }
 #articles .article .texte {opacity:0.9; font-size:17px; font-weight:300; line-height:150%; }
 @media screen and (max-width: 650px) {
   #articles .box {width:90%;}
@@ -88,10 +88,12 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
     </div>
 
 <!-- --------------------------------------------------------------------------- -->
-<!--div id="articles">
+<div id="articles">
 <div class="box">
 
-<div class="article">
+<div class="article" data-id="1"></div>
+
+<div class="article" data-id="1">
 <div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
 <div class="date">15.06.24</div>
 <div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
@@ -111,7 +113,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 
 
 </div>
-</div-->
+</div>
 
 <!-- --------------------------------------------------------------------------- -->
     <div id="contact">
@@ -135,41 +137,34 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 <script>
 
 
-// titre -----------------------------------------------------------------------------------------------------------
-// Sélection de l'élément 'titre' qui est à l'intérieur des classes 'intro' et 'page'
+// affichage titre -----------------------------------------------------------------------------------------------------------
 const titre = document.querySelector('#dev .titre');
-// Prendre le texte directement de l'élément HTML
 const texte = titre.innerHTML;
-// Nettoyer le contenu initial de l'élément pour préparer l'affichage lettre par lettre
 titre.innerHTML = '';
-// La vitesse à laquelle les lettres sont ajoutées (en millisecondes)
-const vitesse = 50; // 100 ms entre chaque lettre
-let i = 0; // Index pour suivre la position dans la chaîne de caractères
+const vitesse = 50;
+let i = 0;
 
 function afficherLettreParLettre() {
   if (i < texte.length) {
-    // Ajouter la lettre actuelle à l'élément 'titre'
     titre.innerHTML += texte.charAt(i);
-    i++; // Passer à la lettre suivante
+    i++;
   } else {
-    // Arrêter le setInterval une fois tout le texte affiché
     clearInterval(interval);
   }
 }
 
-// Démarrer l'intervalle pour exécuter la fonction afficherLettreParLettre
 const interval = setInterval(afficherLettreParLettre, vitesse);
 
 // articles -------------------------------------------------------------------------------------------------------------
 
-/*
+
 fetch('articles/1.html')
 .then(response => response.text())
 .then(html => console.log(html))
 .catch(error => console.error(`Erreur : ${error.message}`));
-*/
 
 
+/*
 
 
 // Sélectionnez tous les éléments avec la classe "article"
@@ -184,7 +179,7 @@ if (articles.length > 0) {
     dernierArticle.style.border = 'none';
     // Ajoutez d'autres styles selon vos besoins
 }
-
+*/
 
 
 
