--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 
 <div class="article" data-id="1"></div>
 
-<div class="article" data-id="1">
+<!--div class="article" data-id="1">
 <div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
 <div class="date">15.06.24</div>
 <div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
@@ -109,7 +109,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 <div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
 <div class="date">15.06.24</div>
 <div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
-</div>
+</div-->
 
 
 </div>
