--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <style>
 
 body,html{ background:black; color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500;  }
-a {color:white;}
+a {text-decoration:none;}
 
 .logo { position:absolute;  z-index:1 ; left: 50%; transform: translateX(-50%) ; top:20px; font-size:18px; font-weight:700; }
 .logo img {width:30px; vertical-align:middle; margin-right:7px; }
@@ -28,8 +28,9 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
  }
 #dev .contenu {position:absolute; width:100%; top: 50%; transform: translateY(-50%) ;  }
 #dev .titre {width:700px; padding-left: calc(50% - 350px); font-size:60px; font-weight:700; line-height:115%; /* text-shadow: 0 0 5px rgba(0,0,0,0.5); */  }
-#dev .soustitre {width:700px; font-size:20px; opacity:0.85; padding:30px calc(50% - 350px); line-height:150%; font-weight:400; }
+#dev .soustitre {width:700px; font-size:20px; opacity:0.85; padding:30px calc(50% - 350px); line-height:150%; font-weight:300; }
 #dev .btn {display:inline-block; border:solid 2px rgba(255,255,255,0.2); padding:15px 25px; border-radius:30px; }
+#dev a {color:white;}
 
 @media screen and (max-width: 800px) {
   #dev .contenu {top: 55%; transform: translateY(-55%) ;  }
@@ -40,6 +41,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 
 /* page articles ------------------------------------------------------------------- */
 #articles {width:100%; background:white; color:black; text-align:center; padding:50px 0; }
+#articles a {color:black;}
 #articles .box {width:600px; margin:0 auto;}
 #articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
 #articles .article {padding:40px 0; text-align:left; border-bottom:solid 1px rgba(0,0,0,0.1); cursor:pointer; }
@@ -93,25 +95,6 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 
 <div class="article" data-id="1"></div>
 
-<!--div class="article" data-id="1">
-<div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
-<div class="date">15.06.24</div>
-<div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
-</div>
-
-<div class="article">
-<div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
-<div class="date">15.06.24</div>
-<div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
-</div>
-
-<div class="article">
-<div class="titre">Llama chez soi ! Llama c’est quoi ?</div>
-<div class="date">15.06.24</div>
-<div class="texte">Llama est une intelligence artificielle développée en open source par Meta (Facebook). Cela signifie que c’est totalement gratuit et que l’on peut l’installer en local. Actuellement, la version la plus puissante de Llama</div>
-</div-->
-
-
 </div>
 </div>
 
@@ -157,11 +140,38 @@ const interval = setInterval(afficherLettreParLettre, vitesse);
 
 // articles -------------------------------------------------------------------------------------------------------------
 
+const articlesContainer = document.getElementById('articles');
+const articles = articlesContainer.getElementsByClassName('article');
+    
 
-fetch('articles/1.html')
+for (let i = 0; i < articles.length; i++) {
+const dataid = articles[i].getAttribute('data-id');
+const url = 'articles/fr/'+dataid+'.html';
+
+fetch(url)
 .then(response => response.text())
-.then(html => console.log(html))
+.then(html => {
+
+const parser = new DOMParser();
+const doc = parser.parseFromString(html, 'text/html');
+
+const titre = doc.getElementById("titre").textContent;
+
+const date = doc.getElementById("date").textContent;
+
+const texte = doc.querySelectorAll('p');
+let textefinal = '';
+texte.forEach(p => {  textefinal = textefinal + " " + p.textContent; });
+textefinal = textefinal.trimStart().slice(0, 200) + "...";
+
+articles[i].innerHTML = '<a href="'+url+'"><div class="titre">'+titre+'</div><div class="date">'+date+'</div><div class="texte">'+textefinal+'</div></a>';
+
+})
 .catch(error => console.error(`Erreur : ${error.message}`));
+
+}
+
+
 
 
 /*
