--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ const articles = articlesContainer.getElementsByClassName('article');
 
 for (let i = 0; i < articles.length; i++) {
 const dataid = articles[i].getAttribute('data-id');
-const url = 'articles/fr/'+dataid+'.html';
+const url = '/articles/fr/'+dataid+'.html';
 
 fetch(url)
 .then(response => response.text())
