--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 #articles .article {padding:40px 0; text-align:left; border-bottom:solid 1px rgba(0,0,0,0.1); cursor:pointer; }
 #articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:150%; }
 #articles .article .date {margin-bottom:10px; opacity:0.5; font-size:15px; font-weight:400; }
-#articles .article .texte {opacity:0.9; font-size:17px; font-weight:300; line-height:150%; }
+#articles .article .texte {opacity:0.9; font-size:17px; font-weight:400; line-height:150%; }
 @media screen and (max-width: 650px) {
+  #articles {padding:0;}
   #articles .box {width:90%;}
+  #articles .article .titre {font-size:22px; font-weight:800; }
+  #articles .article .date {margin: 5px 0 10px 0; font-size:12px; }
 }
 
 /* page contact ------------------------------------------------------------------- */
