--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 <div id="articles">
 <div class="box">
 
+<div class="article" data-id="2"></div>
 <div class="article" data-id="1"></div>
 
 </div>
