--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 }
 
 /* page contact ------------------------------------------------------------------- */
-#contact {width:100%; background:white; color:black; text-align:center; padding:100px 0 100px 0; }
+#contact {width:100%; background:rgb(235,235,235); color:black; text-align:center; padding:100px 0 100px 0; }
 #contact .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:50px; }
 #contact table {margin:0 auto; font-size:25px; text-align:left; font-weight:700; }
 #contact table td {padding:10px;}
@@ -176,24 +176,12 @@ articles[i].innerHTML = '<a href="'+url+'"><div class="titre">'+titre+'</div><di
 }
 
 
-
-
-/*
-
-
-// Sélectionnez tous les éléments avec la classe "article"
-const articles = document.querySelectorAll('.article');
-
-// Vérifiez s'il y a au moins un élément avec la classe "article"
+// cacher barre en dessous du dernier article ----------------------------------------
 if (articles.length > 0) {
-    // Sélectionnez le dernier élément avec la classe "article"
-    const dernierArticle = articles[articles.length - 1];
-
-    // Appliquez le style CSS désiré en modifiant directement les propriétés de style
-    dernierArticle.style.border = 'none';
-    // Ajoutez d'autres styles selon vos besoins
+const dernierArticle = articles[articles.length - 1];
+dernierArticle.style.border = 'none';
 }
-*/
+
 
 
 
