--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 #articles .box {width:600px; margin:0 auto;}
 #articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
 #articles .article {padding:40px 0; text-align:left; border-bottom:solid 1px rgba(0,0,0,0.1); cursor:pointer; }
-#articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:150%; }
-#articles .article .date {margin-bottom:10px; opacity:0.5; font-size:15px; font-weight:400; }
+#articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:130%; }
+#articles .article .date {margin:5px 0 10px 0; opacity:0.5; font-size:15px; font-weight:400; }
 #articles .article .texte {opacity:0.9; font-size:17px; font-weight:400; line-height:150%; }
 @media screen and (max-width: 650px) {
   #articles {padding:0;}
