--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 #articles a {color:black;}
 #articles .box {width:600px; margin:0 auto;}
 #articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
-#articles .article {padding:50px 0; margin:15px 0; text-align:left; /* border-bottom:solid 1px rgba(0,0,0,0.1); */ cursor:pointer; border-radius:20px;  }
+#articles .article {padding:30px; margin:15px 0; text-align:left; /* border-bottom:solid 1px rgba(0,0,0,0.1); */ cursor:pointer; border-radius:20px;  }
 #articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:130%; }
 #articles .article .date {margin:5px 0 15px 0; opacity:0.5; font-size:14px; font-weight:400; }
 #articles .article .texte {opacity:0.9; font-size:18px; font-weight:400; line-height:150%; }
