--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 }
 
 /* page articles ------------------------------------------------------------------- */
-#articles {width:100%; background:white; color:black; text-align:center; padding:40px 0; }
+#articles {width:100%; background:white; color:white; text-align:center; padding:40px 0; }
 #articles a {color:black;}
 #articles .box {width:600px; margin:0 auto;}
 #articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
@@ -48,8 +48,8 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 #articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:130%; }
 #articles .article .date {margin:5px 0 15px 0; opacity:0.5; font-size:14px; font-weight:400; }
 #articles .article .texte {opacity:0.9; font-size:18px; font-weight:400; line-height:150%; }
-#articles .article:nth-of-type(1) {color:white; background-color: rgb(50,50,50); }
-#articles .article:nth-of-type(2) {color:white; background-color: rgb(60,60,60); }
+#articles .article:nth-of-type(1) {background-color: rgb(50,50,50); }
+#articles .article:nth-of-type(2) {background-color: rgb(60,60,60); }
 @media screen and (max-width: 650px) {
   #articles {padding:20px 0;}
   #articles .box {width:87%;}
