--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 
 /* page articles ------------------------------------------------------------------- */
 #articles {width:100%; background:white; color:white; text-align:center; padding:40px 0; }
-#articles a {color:black;}
+#articles a {color:white;}
 #articles .box {width:600px; margin:0 auto;}
 #articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
 #articles .article {padding:30px; margin:15px 0; text-align:left; /* border-bottom:solid 1px rgba(0,0,0,0.1); */ cursor:pointer; border-radius:20px;  }
