--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 #articles {width:100%; background:white; color:white; text-align:center; padding:40px 0; }
 #articles a {color:white;}
 #articles .box {width:600px; margin:0 auto;}
-#articles .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:30px; }
+#articles .titre {font-size:60px; font-weight:900; line-height:115%; padding-bottom:30px; }
 #articles .article {padding:30px; margin:15px 0; text-align:left; /* border-bottom:solid 1px rgba(0,0,0,0.1); */ cursor:pointer; border-radius:20px;  }
 #articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:130%; }
 #articles .article .date {margin:5px 0 15px 0; opacity:0.5; font-size:14px; font-weight:400; }
-#articles .article .texte {opacity:0.9; font-size:18px; font-weight:400; line-height:150%; }
-#articles .article:nth-of-type(1) {background-color: rgb(50,50,50); }
-#articles .article:nth-of-type(2) {background-color: rgb(60,60,60); }
+#articles .article .texte {font-size:18px; font-weight:300; line-height:150%; opacity:0.8; }
+#articles .article:nth-of-type(1) { background-image:linear-gradient(rgb(50,50,50), black); }
+#articles .article:nth-of-type(2) { background-image:linear-gradient(rgb(50,50,50), black); }
 @media screen and (max-width: 650px) {
   #articles {padding:20px 0;}
   #articles .box {width:87%;}
