--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 #articles .article .titre {font-size:24px; font-weight:600; padding:0; margin:0; line-height:130%; }
 #articles .article .date {margin:5px 0 15px 0; opacity:0.5; font-size:14px; font-weight:400; }
 #articles .article .texte {font-size:18px; font-weight:300; line-height:150%; opacity:0.8; }
-#articles .article:nth-of-type(1) { background-image:linear-gradient(rgb(50,50,50), black); }
-#articles .article:nth-of-type(2) { background-image:linear-gradient(rgb(50,50,50), black); }
+#articles .article:nth-of-type(1) { background:rgb(30,30,30); }
+#articles .article:nth-of-type(2) { background:rgb(50,50,50); }
 @media screen and (max-width: 650px) {
   #articles {padding:20px 0;}
   #articles .box {width:87%;}
