--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 }
 
 /* page contact ------------------------------------------------------------------- */
-#contact {width:100%; background:rgb(235,235,235); color:black; text-align:center; padding:100px 0 100px 0; }
+#contact {width:100%; color:black; text-align:center; padding:50px 0 100px 0; }
 #contact .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:50px; }
 #contact table {margin:0 auto; font-size:25px; text-align:left; font-weight:700; }
 #contact table td {padding:10px;}
