--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
   #articles .box {width:87%;}
   #articles .article .titre {font-size:22px; font-weight:900; }
   #articles .article .date {margin: 5px 0 10px 0; font-size:12px; }
+  #articles .article .texte {font-size:16px; }
 }
 
 /* page contact ------------------------------------------------------------------- */
-#contact {width:100%; color:black; text-align:center; padding:50px 0 100px 0; }
+#contact {width:100%; background:white; color:black; text-align:center; padding:50px 0 100px 0; }
 #contact .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:50px; }
 #contact table {margin:0 auto; font-size:25px; text-align:left; font-weight:700; }
 #contact table td {padding:10px;}
