--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
 #contact .titre {font-size:60px; font-weight:800; line-height:115%; padding-bottom:50px; }
 #contact table {margin:0 auto; font-size:25px; text-align:left; font-weight:700; }
 #contact table td {padding:10px;}
-#contact .material-symbols-outlined {background:black; color:rgb(177, 245, 254); border-radius:30px; padding:10px; font-size:25px; font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 24;  }
+#contact .material-symbols-outlined {background:black; color:white; border-radius:30px; padding:10px; font-size:25px; font-variation-settings:'FILL' 1,'wght' 600,'GRAD' 0,'opsz' 24;  }
 #contact a {color:black; text-decoration:none;}
 
 @media screen and (max-width: 800px) {
