--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@ radial-gradient(ellipse at 75% 75%, rgba(111, 0, 167, 0.3) 0% , black 50%);
       <table>
         <tr>
           <td><span class="material-symbols-outlined">mail</span></td>
-          <td>info@watermelon.ch</td>
+          <td>info@watermelon.fr</td>
         </tr>
         <tr>
           <td><span class="material-symbols-outlined">call</span></td>
-          <td>+41 79 291 87 21</td>
+          <td>+33 7 75 77 72 73</td>
         </tr>
       </table>
 
