--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 </div>
 
 <!-- --------------------------------------------------------------------------- -->
+<div id="mots"></div>
+
+<!-- --------------------------------------------------------------------------- -->
     <div id="contact">
       
       <div class="titre">Discutons de votre projet</div>
